--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Matthew Guile # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for South Africa's leading financial service providers. Fast learner with a strong technical aptitude and creative mindset.
+
+
+  <a href="https://www.linkedin.com/in/matthewguile/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/matthewguile/">View My CV</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
