--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
 
 
   <a href="https://www.linkedin.com/in/matthewguile/">View My LinkedIn Profile</a> 
-  <a href="https://www.linkedin.com/in/matthewguile/">View My CV</a> 
+  <a href="/Matthew_Guile_CV.pdf">View My CV</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
