--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,11 @@
 title: Matthew Guile # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for South Africa's leading financial service providers. Fast learner with a strong technical aptitude and creative mindset.
+
+Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for South Africa's leading financial service providers. 
+<br>
+Fast learner with a strong technical aptitude and creative mindset. Psychology graduate and self-taught R enthusiast. 
+<br>
 
 
   <a href="https://www.linkedin.com/in/matthewguile/">View My LinkedIn Profile</a> 
