--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,13 @@ title: Matthew Guile # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
- Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for South Africa's leading financial service providers. 
+ Hi, I'm Matthew. I'm a Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for some of South Africa's leading financial service providers. 
  
  <br>
  
- Fast learner with a strong technical aptitude and creative mindset. Psychology graduate and self-taught R enthusiast. 
+ I have a post-graduate degree in Psychology and I'm passionate about mental health. In my free time, I enjoy learning R, procuding music, listening to podcasts, and playing with my cats. 
+
+
  
  <br>
  
