--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,19 @@ title: Matthew Guile # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
- Hi, I'm Matthew. I'm a Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for some of South Africa's leading financial service providers. 
+ I'm a Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for some of South Africa's leading financial service providers. 
  
  <br>
  
  <br>
- I have a post-graduate degree in Psychology and I'm passionate about mental health. In my free time, I enjoy learning R, producing music and listening to podcasts.
+ I have a post-graduate degree in Psychology and I'm passionate about mental health. I'm a self-taught R enthuasist and an amateur music producer. My free time is best spent listening to podcasts and playing with my cats.
 
 
  
  <br>
  
  <br>
-  <a href="/Matthew_Guile_CV.pdf">Download My CV</a> 
+  <a href="/Matthew_Guile_CV.pdf">View My CV</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
