--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,10 @@ title: Matthew Guile # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
- I'm a Microsoft certified data analyst with two years of SaaS experience developing consumer insights reports for some of South Africa's leading financial service providers. 
- 
+ Detail-orientated data analyst with over two years of SaaS experience in the social listening domain. Fast learner with a strong technical aptitude and creative mindset. Microsoft Certified Solutions Associate in BI Reporting and a self-taught R enthusiast.
+
  <br>
  
- <br>
- I have a post-graduate degree in Psychology and I'm passionate about mental health. I'm a self-taught R enthuasist and an amateur music producer. My free time is best spent listening to podcasts and playing with my cats.
 
 
  
