--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Matthew Guile # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
- Detail-orientated data analyst with over two years of SaaS experience in the social listening domain. Fast learner with a strong technical aptitude and creative mindset. Microsoft Certified Solutions Associate in BI Reporting and a self-taught R enthusiast.
-
+ Data professional with three years of analytics experience delivering insights to South Africa's leading brands. Microsoft Certified Solutions Associate in BI Reporting and a natural language processing enthusiast. Fast learner with a strong technical aptitude and creative mindset.
+ 
  <br>
  
 
